--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-#          - 'arm-clang'
+          # - 'arm-clang' # clang is built by circle-ci
           - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
@@ -81,7 +81,7 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-          #- 'arm-clang'
+          # - 'arm-clang' # clang is built by circle-ci
           - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
