--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -8,14 +8,14 @@ commands:
         toolchain_url:
             type: string
     steps:
-#      - run:
-#          name: Make toolchain cache key
-#          command: echo "<< parameters.toolchain >>-<< parameters.toolchain_url>>" > toolchain_key
-#      - restore_cache:
-#          name: Restore Toolchain Cache
-#          key: deps-{{ checksum "toolchain_key" }}
-#          paths:
-#            - ~/cache/<< parameters.toolchain >>
+      - run:
+          name: Make toolchain cache key
+          command: echo "<< parameters.toolchain >>-<< parameters.toolchain_url>>" > toolchain_key
+      - restore_cache:
+          name: Restore Toolchain Cache
+          key: deps-{{ checksum "toolchain_key" }}
+          paths:
+            - ~/cache/<< parameters.toolchain >>
       - run:
           name: Install Toolchain
           command: |
@@ -25,11 +25,11 @@ commands:
               wget << parameters.toolchain_url>> -O toolchain.tar.gz
               tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
             fi
-#      - save_cache:
-#          name: Save Toolchain Cache
-#          key: deps-{{ checksum "toolchain_key" }}
-#          paths:
-#            - ~/cache/<< parameters.toolchain >>
+      - save_cache:
+          name: Save Toolchain Cache
+          key: deps-{{ checksum "toolchain_key" }}
+          paths:
+            - ~/cache/<< parameters.toolchain >>
       - run:
           name: Setup build environment
           command: |
@@ -45,9 +45,29 @@ commands:
         type: string
     steps:
       - run:
+          name: Make deps cache key
+          command: |
+            python tools/get_deps.py --print > deps_key
+      - restore_cache:
+          name: Restore Dependencies Cache
+          key: deps-{{ checksum "deps_key" }}
+          paths:
+            - lib/CMSIS_5
+            - lib/FreeRTOS-Kernel
+            - lib/lwip
+            - tools/uf2
+      - run:
           name: Get Dependencies
           command: |
             python tools/get_deps.py << parameters.family >>
+      - save_cache:
+          name: Save Dependencies Cache
+          key: deps-{{ checksum "deps_key" }}
+          paths:
+            - lib/CMSIS_5
+            - lib/FreeRTOS-Kernel
+            - lib/lwip
+            - tools/uf2
 
 jobs:
   arm-clang:
@@ -71,13 +91,7 @@ jobs:
           family: << parameters.family >>
       - run:
           name: Build
-          command: |
-            # Only build one board per family for non PRs i.e commit to master
-            ONE_PER_FAMILY=""
-            if [ -z "$CIRCLE_PULL_REQUEST" ]; then
-              ONE_PER_FAMILY="--one-per-family"
-            fi
-            python tools/build.py $ONE_PER_FAMILY -s << parameters.build-system >> --toolchain clang << parameters.family >>
+          command: python tools/build.py -s << parameters.build-system >> --toolchain clang --one-per-family << parameters.family >>
 
 workflows:
   build:
@@ -87,30 +101,6 @@ workflows:
             parameters:
               build-system:
                 - cmake
-              #family: ['stm32f1']
-              #family: ['stm32f1', 'stm32f2']
-              family: ['imxrt', 'kinetis_k kinetis_kl kinetis_k32l2', 'lpc11 lpc13 lpc15', 'lpc17 lpc18 lpc40 lpc43', 'lpc51 lpc54 lpc55', 'nrf', 'samd11 samd21 saml2x', 'samd5x_e5x samg', 'stm32f0 stm32f1 stm32f2 stm32f3', 'stm32f4', 'stm32f7', 'stm32g0 stm32g4 stm32h5', 'stm32h7', 'stm32l4 stm32u5 stm32wb']
-
-
-#setup: true
-#orbs:
-#  continuation: circleci/continuation@1.0.0
-#
-#jobs:
-#  set-matrix:
-#    docker:
-#      - image: cimg/base:current
-#    resource_class: small
-#    steps:
-#      - checkout
-#      - run:
-#          name: Set matrix
-#          command: |
-#            echo "set matrix"
-#      - continuation/continue:
-#          configuration_path: .circleci/config2.yml
-#
-#workflows:
-#  set-matrix-workflow:
-#    jobs:
-#      - set-matrix
+#              family: ['stm32f1']
+              family: ['stm32f1', 'stm32f2']
+#              family: ['imxrt', 'kinetis_k kinetis_kl kinetis_k32l2', 'lpc11 lpc13 lpc15', 'lpc17 lpc18 lpc40 lpc43', 'lpc51 lpc54 lpc55', 'nrf', 'samd11 samd21 saml2x', 'samd5x_e5x samg', 'stm32f0 stm32f1 stm32f2 stm32f3', 'stm32f4', 'stm32f7', 'stm32g0 stm32g4 stm32h5', 'stm32h7', 'stm32l4 stm32u5 stm32wb']
