--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -11,32 +11,31 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - id: set-docker-image
+    - name: Set DOCKER_ESP_IDF
       run: |
-        DOCKER_IMAGE=$HOME/cache/${{ inputs.toolchain }}/docker_image.tar
-        echo "DOCKER_IMAGE=$DOCKER_IMAGE" >> $GITHUB_ENV
-        echo "DOCKER_IMAGE=$DOCKER_IMAGE" >> $GITHUB_OUTPUT
+        DOCKER_ESP_IDF=$HOME/cache/${{ inputs.toolchain }}/docker_image.tar
+        echo "DOCKER_ESP_IDF=$DOCKER_ESP_IDF" >> $GITHUB_ENV
       shell: bash
 
     - name: Cache Docker Image
       uses: actions/cache@v4
       id: cache-toolchain-espressif
       with:
-        path: ${{ steps.set-docker-image.outputs.DOCKER_IMAGE }}
+        path: ${{ env.DOCKER_ESP_IDF }}
         key: ${{ inputs.toolchain }}-${{ inputs.toolchain_url }}
 
     - name: Pull and Save Docker Image
       if: steps.cache-toolchain-espressif.outputs.cache-hit != 'true'
       run: |
         docker pull espressif/idf:${{ inputs.toolchain_url }}
-        mkdir -p ~/cache/${{ inputs.toolchain }}
-        docker save -o $DOCKER_IMAGE espressif/idf:${{ inputs.toolchain_url }}
-        du -sh $DOCKER_IMAGE
+        mkdir -p $(dirname $DOCKER_ESP_IDF)
+        docker save -o $DOCKER_ESP_IDF espressif/idf:${{ inputs.toolchain_url }}
+        du -sh $DOCKER_ESP_IDF
       shell: bash
 
     - name: Load Docker Image
       if: steps.cache-toolchain-espressif.outputs.cache-hit == 'true'
       run: |
-        du -sh $DOCKER_IMAGE
-        docker load --input $DOCKER_IMAGE
+        du -sh $DOCKER_ESP_IDF
+        docker load --input $DOCKER_ESP_IDF
       shell: bash
