--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
   # Build CMake
   # ---------------------------------------
   cmake:
+    if: false
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
@@ -58,7 +59,7 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-          # - 'arm-clang' # clang is built by circle-ci
+          # - 'arm-clang' is built by circle-ci
           - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
@@ -73,7 +74,7 @@ jobs:
   # Build Make
   # ---------------------------------------
   make:
-    #if: github.event_name == 'pull_request'
+    # if: false
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
@@ -81,10 +82,11 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-          # - 'arm-clang' # clang is built by circle-ci
-          - 'arm-gcc'
+          # 'arm-clang' is built by circle-ci
+          #- 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
+          - 'rx-gcc'
     with:
       build-system: 'make'
       toolchain: ${{ matrix.toolchain }}
@@ -112,6 +114,7 @@ jobs:
   # Build Espressif
   # ---------------------------------------
   espressif:
+    if: false
     uses: ./.github/workflows/build_util.yml
     strategy:
       fail-fast: false
@@ -131,7 +134,8 @@ jobs:
   # Build IAR on HFP self-hosted
   # ---------------------------------------
   arm-iar:
-    if: github.repository_owner == 'hathach'
+    if: false
+    # if: github.repository_owner == 'hathach'
     needs: set-matrix
     runs-on: [self-hosted, Linux, X64, hifiphile]
     env:
