--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,15 +51,15 @@ jobs:
   # Build CMake
   # ---------------------------------------
   cmake:
-    if: false
+    # if: false
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
       fail-fast: false
       matrix:
         toolchain:
-          - 'aarch64-gcc'
           # - 'arm-clang' is built by circle-ci
+          - 'aarch64-gcc'
           - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
@@ -81,9 +81,9 @@ jobs:
       fail-fast: false
       matrix:
         toolchain:
-          - 'aarch64-gcc'
           # 'arm-clang' is built by circle-ci
-          #- 'arm-gcc'
+          - 'aarch64-gcc'
+          - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
           - 'rx-gcc'
@@ -114,7 +114,7 @@ jobs:
   # Build Espressif
   # ---------------------------------------
   espressif:
-    if: false
+    # if: false
     uses: ./.github/workflows/build_util.yml
     strategy:
       fail-fast: false
@@ -134,8 +134,8 @@ jobs:
   # Build IAR on HFP self-hosted
   # ---------------------------------------
   arm-iar:
-    if: false
-    # if: github.repository_owner == 'hathach'
+    # if: false
+    if: github.repository_owner == 'hathach'
     needs: set-matrix
     runs-on: [self-hosted, Linux, X64, hifiphile]
     env:
