Update CDC_MSC example to work for DeVito SAMD51N19A (#1)

--- a/examples/device/cdc_msc_freertos/Makefile
+++ b/examples/device/cdc_msc_freertos/Makefile
@@ -11,7 +11,9 @@ INC += \
 	$(TOP)/$(FREERTOS_PORTABLE_SRC) \
 
 # Example source
+# Updated by Nikhil to include FreeRTOS heap implementation to get working on DeVito Board
 EXAMPLE_SOURCE = \
+	src/heap_2.c \
 	src/freertos_hook.c \
 	src/main.c \
 	src/msc_disk.c \
