add stm32g0 (fsdev 2k) to hil pool remove esp32s3 since cp210x cause usb bus issue in the long run

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,10 +120,8 @@ jobs:
       fail-fast: false
       matrix:
         board:
-          # ESP32-S2
           - 'espressif_kaluga_1'
-          # ESP32-S3 skip since devkitm is also compiled in hil-test workflow
-          #- 'espressif_s3_devkitm'
+          - 'espressif_s3_devkitm'
     with:
       build-system: 'cmake'
       toolchain: 'esp-idf'
