--- a/.github/workflows/hil_test.yml
+++ b/.github/workflows/hil_test.yml
@@ -150,6 +150,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: cmake-build
+          merge-multiple: true
 
       - name: Test on actual hardware
         run: |
