--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
         toolchain:
           # - 'arm-clang' is built by circle-ci
           - 'aarch64-gcc'
-          - 'arm-gcc'
+          #- 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
     with:
@@ -74,7 +74,7 @@ jobs:
   # Build Make
   # ---------------------------------------
   make:
-    # if: false
+    if: false
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
@@ -114,7 +114,7 @@ jobs:
   # Build Espressif
   # ---------------------------------------
   espressif:
-    # if: false
+    if: false
     uses: ./.github/workflows/build_util.yml
     strategy:
       fail-fast: false
