remove toolchain url from ci_set_matrix, rename toolchain_url to toolchain_version

--- a/.github/actions/setup_toolchain/action.yml
+++ b/.github/actions/setup_toolchain/action.yml
@@ -4,7 +4,7 @@ inputs:
   toolchain:
     description: 'Toolchain name'
     required: true
-  toolchain_url:
+  toolchain_version:
     description: 'Toolchain version'
     required: false
 
@@ -27,7 +27,7 @@ runs:
       uses: ./.github/actions/setup_toolchain/espressif
       with:
         toolchain: ${{ inputs.toolchain }}
-        toolchain_url: ${{ inputs.toolchain_url }}
+        toolchain_version: ${{ inputs.toolchain_version }}
 
     - name: Get Toolchain URL
       if: >-
