--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,7 +112,7 @@ jobs:
   # Build Espressif
   # ---------------------------------------
   espressif:
-    if: false
+    # if: false
     uses: ./.github/workflows/build_util.yml
     strategy:
       fail-fast: false
