--- a/.github/workflows/hil_test.yml
+++ b/.github/workflows/hil_test.yml
@@ -25,7 +25,8 @@ jobs:
   # Build Non Espressif
   # ---------------------------------------
   build:
-    if: github.repository_owner == 'hathach'
+    #if: github.repository_owner == 'hathach'
+    if: false
     runs-on: ubuntu-latest
     outputs:
       BOARDS_LIST: ${{ steps.parse_hil_json.outputs.BOARDS_LIST }}
