--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ orbs:
 
 jobs:
   set-matrix:
+    executor: continuation/default
     docker:
       - image: cimg/base:current
     resource_class: small
@@ -14,7 +15,13 @@ jobs:
       - run:
           name: Set matrix
           command: |
-            echo "set matrix"
+            MATRIX_JSON=$(python .github/workflows/ci_set_matrix.py)
+            echo "MATRIX_JSON=$MATRIX_JSON"
+            ARMCLANG_FAMILY=$(echo $MATRIX_JSON | jq '.["arm-clang"]')
+            echo "ARMCLANG_FAMILY=ARMCLANG_FAMILY"
+#            echo "              build-system: cmake" >> .circleci/config2.yml
+#            echo "              family: $ARMCLANG_FAMILY" >> .circleci/config2.yml
+
       - continuation/continue:
           configuration_path: .circleci/config2.yml
 
