--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -85,6 +85,5 @@ workflows:
       - arm-clang:
           matrix:
             parameters:
-              build-system: ['cmake']
-              family: ['lpc51']
+#              build-system: ['cmake']
 #              family: ['imxrt', 'kinetis_k kinetis_kl kinetis_k32l2', 'lpc11 lpc13 lpc15', 'lpc17 lpc18 lpc40 lpc43', 'lpc51 lpc54 lpc55', 'nrf', 'samd11 samd21 saml2x', 'samd5x_e5x samg', 'stm32f0 stm32f1 stm32f2 stm32f3', 'stm32f4', 'stm32f7', 'stm32g0 stm32g4 stm32h5', 'stm32h7', 'stm32l4 stm32u5 stm32wb']
