--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -5,31 +5,20 @@ commands:
     parameters:
         toolchain:
             type: string
-        toolchain_url:
-            type: string
     steps:
-#      - run:
-#          name: Make toolchain cache key
-#          command: echo "<< parameters.toolchain >>-<< parameters.toolchain_url>>" > toolchain_key
-#      - restore_cache:
-#          name: Restore Toolchain Cache
-#          key: deps-{{ checksum "toolchain_key" }}
-#          paths:
-#            - ~/cache/<< parameters.toolchain >>
       - run:
           name: Install Toolchain
           command: |
-            # Only download if folder does not exist (not cached)
-            if [ ! -d ~/cache/<< parameters.toolchain >> ]; then
-              mkdir -p ~/cache/<< parameters.toolchain >>
-              wget << parameters.toolchain_url>> -O toolchain.tar.gz
-              tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
-            fi
-#      - save_cache:
-#          name: Save Toolchain Cache
-#          key: deps-{{ checksum "toolchain_key" }}
-#          paths:
-#            - ~/cache/<< parameters.toolchain >>
+            TOOLCHAIN_JSON= '{
+              "arm-clang": "https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz",
+              "arm-gcc": "https://github.com/xpack-dev-tools/arm-none-eabi-gcc-xpack/releases/download/v13.2.1-1.1/xpack-arm-none-eabi-gcc-13.2.1-1.1-linux-x64.tar.gz",
+            }'
+            toolchain_url=$(echo $TOOLCHAIN_JSON | jq -r '.["<< parameters.toolchain >>"]')
+            echo "toolchain_url=$toolchain_url"
+            # download and extract toolchain
+            mkdir -p ~/cache/<< parameters.toolchain >>
+            wget $toolchain_url -O toolchain.tar.gz
+            tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
       - run:
           name: Setup build environment
           command: |
@@ -50,23 +39,22 @@ commands:
             python tools/get_deps.py << parameters.family >>
 
 jobs:
-  arm-clang:
+  build:
     parameters:
-      family:
-        type: string
       build-system:
+        type: string
+      toolchain:
+        type: string
+      family:
         type: string
 
     docker:
       - image: cimg/base:current
     resource_class: medium
-    environment:
-      TOOLCHAIN_URL: https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz
     steps:
       - checkout
       - setup-toolchain:
-          toolchain: clang
-          toolchain_url: $TOOLCHAIN_URL
+          toolchain: << parameters.toolchain >>
       - get-deps:
           family: << parameters.family >>
       - run:
@@ -82,8 +70,15 @@ jobs:
 workflows:
   build:
     jobs:
-      - arm-clang:
-          matrix:
-            parameters:
+#      - build:
+#          matrix:
+#            parameters:
+#              toolchain: ['arm-clang']
 #              build-system: ['cmake']
-#              family: ['imxrt', 'kinetis_k kinetis_kl kinetis_k32l2', 'lpc11 lpc13 lpc15', 'lpc17 lpc18 lpc40 lpc43', 'lpc51 lpc54 lpc55', 'nrf', 'samd11 samd21 saml2x', 'samd5x_e5x samg', 'stm32f0 stm32f1 stm32f2 stm32f3', 'stm32f4', 'stm32f7', 'stm32g0 stm32g4 stm32h5', 'stm32h7', 'stm32l4 stm32u5 stm32wb']
+#              family: ['imxrt']
+#      - build:
+#          matrix:
+#            parameters:
+#              toolchain: ['arm-gcc']
+#              build-system: ['make']
+#              family: ['stm32f1']
