increase resource class to large

--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -45,7 +45,7 @@ jobs:
 
     docker:
       - image: cimg/base:current
-    resource_class: medium+
+    resource_class: large
     steps:
       - checkout
       - when:
