test again with make with medium+

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,16 +18,6 @@ jobs:
             MATRIX_JSON=$(python .github/workflows/ci_set_matrix.py)
             echo "MATRIX_JSON=$MATRIX_JSON"
 
-            # arm-clang
-            ARMCLANG_FAMILY=$(echo $MATRIX_JSON | jq '.["arm-clang"].family')
-            echo "ARMCLANG_FAMILY=$ARMCLANG_FAMILY"
-            echo "      - build:" >> .circleci/config2.yml
-            echo "          matrix:" >> .circleci/config2.yml
-            echo "            parameters:" >> .circleci/config2.yml
-            echo "              toolchain: ['arm-clang']" >> .circleci/config2.yml
-            echo "              build-system: ['cmake']" >> .circleci/config2.yml
-            echo "              family: $ARMCLANG_FAMILY" >> .circleci/config2.yml
-
             # arm-gcc
             ARMGCC_FAMILY=$(echo $MATRIX_JSON | jq '.["arm-gcc"].family')
             echo "ARMGCC_FAMILY=$ARMGCC_FAMILY"
@@ -35,7 +25,7 @@ jobs:
             echo "          matrix:" >> .circleci/config2.yml
             echo "            parameters:" >> .circleci/config2.yml
             echo "              toolchain: ['arm-gcc']" >> .circleci/config2.yml
-            echo "              build-system: ['cmake']" >> .circleci/config2.yml
+            echo "              build-system: ['make']" >> .circleci/config2.yml
             echo "              family: $ARMGCC_FAMILY" >> .circleci/config2.yml
 
       - continuation/continue:
